<resources>
    <string name="app_name"> SetMinder</string>
    <string name="settings">Settings</string>

    <string name="action_settings">Settings</string>
    <string name="edit_time_title">Time</string>
    <string name="edit_sets_reps_title">Sets x Reps</string>
    <string name="alert_reset">Reset the set counter?</string>
    <string name="alert_finish">You finished all of your sets!\nReset the timer and counter?</string>
    <string name="alert_time_up">Time\'s up!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="notification_title">SetMinder</string>
    <string name="notification_text_plural">\u0020minutes left.</string>
    <string name="notification_text_minute">1 minute left.</string>

    <string name="keep_screen_on_preference">Keep screen on</string>
    <string name="enable_finish_sets_alert_preference">Notify on sets completion</string>
    <string name="alarm_preferences">Alarm</string>
    <string name="vibrate_preference">Vibrate</string>
    <string name="sound_preference">Sound</string>
    <string name="enable_alarm_dismissal_preference">Dismissal Dialog</string>


    <string name="values_preference_file_key">com.miljin.lifttimer.VALUES_PREFERENCE_FILE_KEY</string>
    <string name="saved_time">com.miljin.lifttimer.SAVED_TIME</string>
    <string name="saved_sets">com.miljin.lifttimer.SAVED_SETS</string>
    <string name="saved_reps">com.miljin.lifttimer.SAVED_REPS</string>
    <string name="saved_completed_sets">com.miljin.lifttimer.SAVED_COMPLETED_SETS</string>
</resources>
